--- a/example.env
+++ b/example.env
@@ -1,12 +1,10 @@
-# D-Point Demo Environment Variables
-# This file contains environment variables for the D-Point peer recognition platform demo
+# D-Wallet Demo Environment Variables
+# This file contains environment variables for the D-Wallet digital wallet platform demo
 
 # Application Configuration
-NEXT_PUBLIC_APP_NAME=D-Point
+NEXT_PUBLIC_APP_NAME=D-Wallet
 NEXT_PUBLIC_APP_VERSION=1.0.0
-NEXT_PUBLIC_APP_DESCRIPTION="Peer Recognition Platform"
-
-JWT_SECRET=dpoint-jwt-secret-key-for-demo-authentication-2024
+NEXT_PUBLIC_APP_DESCRIPTION="Digital Wallet Platform"
 
 # Demo Mode Configuration
 NEXT_PUBLIC_DEMO_MODE=true
@@ -14,18 +12,20 @@ NEXT_PUBLIC_ENABLE_MOCK_API=true
 
 # Authentication Configuration (Demo)
 NEXT_PUBLIC_AUTH_PROVIDER=demo
-NEXTAUTH_SECRET=demo-secret-key-for-dpoint-application-2024
+NEXTAUTH_SECRET=demo-secret-key-for-dwallet-application-2024
 NEXTAUTH_URL=http://localhost:3000
+JWT_SECRET=dwallet-jwt-secret-key-for-demo-authentication-2024
 
 # Demo User Credentials
-NEXT_PUBLIC_DEMO_ADMIN_EMAIL=admin@dpoint.demo
+NEXT_PUBLIC_DEMO_ADMIN_EMAIL=admin@dwallet.demo
 NEXT_PUBLIC_DEMO_ADMIN_PASSWORD=Admin123!
-NEXT_PUBLIC_DEMO_EMPLOYEE_EMAIL=employee@dpoint.demo
+NEXT_PUBLIC_DEMO_EMPLOYEE_EMAIL=employee@dwallet.demo
 NEXT_PUBLIC_DEMO_EMPLOYEE_PASSWORD=Employee123!
 
 # Database Configuration (Demo - using local storage)
-DATABASE_URL=demo://localhost/dpoint
+DATABASE_URL=demo://localhost/dwallet
 NEXT_PUBLIC_USE_LOCAL_STORAGE=true
+USER_DATA_FILE=data/demo-users.json
 
 # API Configuration
 NEXT_PUBLIC_API_BASE_URL=http://localhost:3000/api
@@ -42,17 +42,17 @@ NEXT_PUBLIC_DEMO_USERS_COUNT=50
 NEXT_PUBLIC_DEMO_TRANSACTIONS_COUNT=200
 NEXT_PUBLIC_DEMO_REWARDS_COUNT=20
 
-# Coin System Configuration
+# Digital Currency System Configuration
 NEXT_PUBLIC_DEFAULT_MONTHLY_ALLOCATION=100
-NEXT_PUBLIC_MAX_COINS_PER_TRANSACTION=50
-NEXT_PUBLIC_MIN_COINS_PER_TRANSACTION=1
+NEXT_PUBLIC_MAX_CURRENCY_PER_TRANSACTION=50
+NEXT_PUBLIC_MIN_CURRENCY_PER_TRANSACTION=1
 
 # Rewards System Configuration
 NEXT_PUBLIC_REWARD_REDEMPTION_ENABLED=true
 NEXT_PUBLIC_MIN_POINTS_FOR_REDEMPTION=10
 
-# UI Configuration
-NEXT_PUBLIC_THEME=dpoint
+# UI Configuration - Digital Wallet Theme (Violet/Purple)
+NEXT_PUBLIC_THEME=dwallet
 NEXT_PUBLIC_PRIMARY_COLOR=#6B46C1
 NEXT_PUBLIC_SECONDARY_COLOR=#8B5CF6
 NEXT_PUBLIC_ACCENT_COLOR=#A78BFA
@@ -88,17 +88,17 @@ NEXT_PUBLIC_ENABLE_IP_WHITELIST=false
 # Demo Company Information
 NEXT_PUBLIC_COMPANY_NAME="Demo Company"
 NEXT_PUBLIC_COMPANY_LOGO="/images/demo-logo.png"
-NEXT_PUBLIC_COMPANY_WEBSITE="https://demo.dpoint.com"
+NEXT_PUBLIC_COMPANY_WEBSITE="https://demo.dwallet.com"
 
 # Demo Contact Information
-NEXT_PUBLIC_SUPPORT_EMAIL=support@dpoint.demo
-NEXT_PUBLIC_SUPPORT_PHONE=+1-555-DPOINT
+NEXT_PUBLIC_SUPPORT_EMAIL=support@dwallet.demo
+NEXT_PUBLIC_SUPPORT_PHONE=+1-555-DWALLET
 NEXT_PUBLIC_SUPPORT_HOURS="9 AM - 5 PM EST"
 
 # Demo Social Links
-NEXT_PUBLIC_SOCIAL_TWITTER=https://twitter.com/dpoint_demo
-NEXT_PUBLIC_SOCIAL_LINKEDIN=https://linkedin.com/company/dpoint-demo
-NEXT_PUBLIC_SOCIAL_FACEBOOK=https://facebook.com/dpoint.demo
+NEXT_PUBLIC_SOCIAL_TWITTER=https://twitter.com/dwallet_demo
+NEXT_PUBLIC_SOCIAL_LINKEDIN=https://linkedin.com/company/dwallet-demo
+NEXT_PUBLIC_SOCIAL_FACEBOOK=https://facebook.com/dwallet.demo
 
 # Deployment Configuration
 NEXT_PUBLIC_DEPLOYMENT_ENV=demo
